--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -57,15 +57,8 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "import matplotlib.pyplot as plt\n",
-    "import scanpy as sc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import scanpy as sc\n",
+    "\n",
     "ln.context.uid = \"daeFs3PkquDW0000\"\n",
     "ln.context.track()"
    ]
@@ -104,7 +97,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata = ln.core.datasets.anndata_suo22_Visium10X()\n",
@@ -153,7 +150,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curate.validate()"
@@ -162,7 +163,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curate.add_validated_from_var_index()"
@@ -171,7 +176,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curate.add_new_from('sample')"
@@ -180,7 +189,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curate.validate()"
@@ -209,7 +222,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact_ad.describe()"
@@ -239,7 +256,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "collection = ln.Collection([artifact_ad, artifact_img], name=\"Suo22\")\n",
