--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The {mod}`wetlab` schema has th major components:\n",
+    "The {mod}`wetlab` schema has two major components:\n",
     "\n",
     "1. {class}`wetlab.EnvironmentalTreatment` to model perturbations such as heat, {class}`wetlab.GeneticTreatment` to model perturbations such as CRISPR, and {class}`wetlab.CompoundTreatment` to model, for example, drugs. Several treatments together can be modeled using {class}`wetlab.CombinationTreatment`.\n",
     "2. Known targets of treatments can be modeled through {class}`wetlab.TreatmentTarget` which can be one or several of {class}`bionty.Gene`, {class}`bionty.Protein`, or {class}`bionty.Pathway` records."
