:sparkles: Format all notebooks
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -233,14 +233,14 @@
    "outputs": [],
    "source": [
     "curate = ln.Curator.from_anndata(\n",
-    "    adata_subset.to_memory(), \n",
-    "    var_index=bt.Gene.ensembl_gene_id, \n",
+    "    adata_subset.to_memory(),\n",
+    "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals={\n",
-    "        \"cell_type\": bt.CellType.name, \n",
-    "        \"disease\": bt.Disease.name, \n",
+    "        \"cell_type\": bt.CellType.name,\n",
+    "        \"disease\": bt.Disease.name,\n",
     "        \"tissue\": bt.Tissue.name,\n",
     "    },\n",
-    "    organism=\"human\"\n",
+    "    organism=\"human\",\n",
     ")\n",
     "\n",
     "curate.validate()"
