--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -93,7 +93,9 @@
    "outputs": [],
    "source": [
     "# pretend we're running a bulk RNA-seq pipeline\n",
-    "ln.track(transform=ln.Transform(name=\"nf-core RNA-seq\", reference=\"https://nf-co.re/rnaseq\"))\n",
+    "ln.track(\n",
+    "    transform=ln.Transform(name=\"nf-core RNA-seq\", reference=\"https://nf-co.re/rnaseq\")\n",
+    ")\n",
     "# create a directory for its output\n",
     "Path(\"./test-bulkrna/output_dir\").mkdir(exist_ok=True)\n",
     "# get the count matrix\n",
@@ -364,10 +366,7 @@
    },
    "outputs": [],
    "source": [
-    "curated_file = ln.Artifact.from_anndata(\n",
-    "    adata,\n",
-    "    description=\"Curated bulk RNA counts\"\n",
-    ")"
+    "curated_file = ln.Artifact.from_anndata(adata, description=\"Curated bulk RNA counts\")"
    ]
   },
   {
@@ -407,7 +406,9 @@
    },
    "outputs": [],
    "source": [
-    "curated_file.features._add_set_from_anndata(var_field=bt.Gene.stable_id, organism=\"saccharomyces cerevisiae\")"
+    "curated_file.features._add_set_from_anndata(\n",
+    "    var_field=bt.Gene.stable_id, organism=\"saccharomyces cerevisiae\"\n",
+    ")"
    ]
   },
   {
