--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -391,9 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = bt.Source.get(\n",
-    "    name=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
-    ")\n",
+    "source = bt.Source.get(name=\"cellmarker\", version=\"2.0\", organism=\"human\")\n",
     "public = bt.CellMarker.public(source=source)\n",
     "public"
    ]
