--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -52,9 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(\n",
-    "    name=\"My versioned cytometry collection\", version=\"2\"\n",
-    ")"
+    "collection = ln.Collection.get(name=\"My versioned cytometry collection\", version=\"2\")"
    ]
   },
   {
