--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -340,7 +340,11 @@
     "genetic_treatments = []\n",
     "for name, symbol, target_name in treatments:\n",
     "    treatment = wl.GeneticTreatment(system=\"CRISPR KO\", name=name).save()\n",
-    "    gene = bt.Gene.from_source(symbol=symbol, organism=organism).save() if symbol != \"lacz\" else bt.Gene(symbol=symbol, organism=organism).save()\n",
+    "    gene = (\n",
+    "        bt.Gene.from_source(symbol=symbol, organism=organism).save()\n",
+    "        if symbol != \"lacz\"\n",
+    "        else bt.Gene(symbol=symbol, organism=organism).save()\n",
+    "    )\n",
     "    target = wl.TreatmentTarget(name=target_name).save()\n",
     "    target.genes.add(gene)\n",
     "    treatment.targets.add(target)\n",
@@ -457,8 +461,8 @@
     "# We found a synonym for jq1. Let's use the correct name for the metadata\n",
     "drug_metadata = adata.obs[adata.obs[\"perturbation_type\"] == \"drug\"].copy()\n",
     "drug_metadata[\"perturbation\"] = drug_metadata[\"perturbation\"].cat.rename_categories(\n",
-    "        {\"jq1\": wl.Compound.search(\"jq1\").one().name}\n",
-    "    )"
+    "    {\"jq1\": wl.Compound.search(\"jq1\").one().name}\n",
+    ")"
    ]
   },
   {
