--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -137,6 +137,7 @@
     "    )\n",
     "    output_file.save()\n",
     "\n",
+    "\n",
     "mock_upload_crispra_result_app()"
    ]
   },
@@ -170,7 +171,9 @@
     "from pathlib import Path\n",
     "\n",
     "cwd = Path.cwd()\n",
-    "nbproject_test.execute_notebooks(cwd / \"project-flow-scripts/hit-identification.ipynb\", write=True)"
+    "nbproject_test.execute_notebooks(\n",
+    "    cwd / \"project-flow-scripts/hit-identification.ipynb\", write=True\n",
+    ")"
    ]
   },
   {
@@ -316,7 +319,9 @@
    "source": [
     "# the following mimics the integrated analysis notebook\n",
     "# In reality, you would execute inside the notebook\n",
-    "nbproject_test.execute_notebooks(cwd / \"project-flow-scripts/integrated-analysis.ipynb\", write=True)"
+    "nbproject_test.execute_notebooks(\n",
+    "    cwd / \"project-flow-scripts/integrated-analysis.ipynb\", write=True\n",
+    ")"
    ]
   },
   {
