--- a/docs/rdf-sparql.ipynb
+++ b/docs/rdf-sparql.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "source": [
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
@@ -102,10 +103,12 @@
     "namespace = URIRef(\"http://sparql-example.org/\")\n",
     "\n",
     "for _, row in diseases.iterrows():\n",
-    "    subject = URIRef(namespace + str(row['ontology_id']))\n",
+    "    subject = URIRef(namespace + str(row[\"ontology_id\"]))\n",
     "    rdf_graph.add((subject, RDF.type, URIRef(namespace + \"Disease\")))\n",
-    "    rdf_graph.add((subject, URIRef(namespace + \"name\"), Literal(row['name'])))\n",
-    "    rdf_graph.add((subject, URIRef(namespace + \"description\"), Literal(row['description'])))\n",
+    "    rdf_graph.add((subject, URIRef(namespace + \"name\"), Literal(row[\"name\"])))\n",
+    "    rdf_graph.add(\n",
+    "        (subject, URIRef(namespace + \"description\"), Literal(row[\"description\"]))\n",
+    "    )\n",
     "\n",
     "rdf_graph"
    ]
