--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -144,7 +144,12 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(adata, var_index=bt.Gene.ensembl_gene_id, categoricals={\"sample\": ln.ULabel.name}, organism=\"human\")"
+    "curate = ln.Curator.from_anndata(\n",
+    "    adata,\n",
+    "    var_index=bt.Gene.ensembl_gene_id,\n",
+    "    categoricals={\"sample\": ln.ULabel.name},\n",
+    "    organism=\"human\",\n",
+    ")"
    ]
   },
   {
@@ -183,7 +188,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_new_from('sample')"
+    "curate.add_new_from(\"sample\")"
    ]
   },
   {
