--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -87,15 +87,15 @@
     "curate = ln.Curator.from_mudata(\n",
     "    mdata,\n",
     "    var_index={\n",
-    "        \"rna\": bt.Gene.symbol, # gene expression\n",
-    "        \"adt\": bt.CellMarker.name, # antibody derived tags reflecting surface proteins\n",
-    "        \"hto\": ln.Feature.name, # cell hashing\n",
-    "        \"gdo\": ln.Feature.name, # guide RNAs\n",
+    "        \"rna\": bt.Gene.symbol,  # gene expression\n",
+    "        \"adt\": bt.CellMarker.name,  # antibody derived tags reflecting surface proteins\n",
+    "        \"hto\": ln.Feature.name,  # cell hashing\n",
+    "        \"gdo\": ln.Feature.name,  # guide RNAs\n",
     "    },\n",
     "    categoricals={\n",
     "        \"perturbation\": ln.ULabel.name,  # shared categorical\n",
-    "        \"replicate\": ln.ULabel.name, # shared categorical\n",
-    "        \"hto:technique\": bt.ExperimentalFactor.name # note this is a modality specific categorical\n",
+    "        \"replicate\": ln.ULabel.name,  # shared categorical\n",
+    "        \"hto:technique\": bt.ExperimentalFactor.name,  # note this is a modality specific categorical\n",
     "    },\n",
     "    organism=\"human\",\n",
     ")"
