:sparkles: Improve wording
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this guide we demonstrate how to curate a complex, real world perturbation dataset [McFarland et al. 2020](https://www.nature.com/articles/s41467-020-17440-w) using the {mod}`wetlab` schema.\n",
+    "This guide demonstrates how to curate a complex, real world perturbation dataset [McFarland et al. 2020](https://www.nature.com/articles/s41467-020-17440-w) using the {mod}`wetlab` schema.\n",
     "To speed up processing, we load a downsampled version (1000 cells) of the original dataset."
    ]
   },
