--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -55,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "# To speed up processing, we load a downsampled version (1000 cells) of the original dataset.\n",
+    "# See https://lamin.ai/laminlabs/lamindata/transform/13VINnFk89PE0004 to learn how this dataset was prepared\n",
     "adata = ln.Artifact.using(\"laminlabs/lamindata\").get(uid=\"Xk7Qaik9vBLV4PKf0000\").load()\n",
     "adata.obs.head(3)"
    ]
@@ -74,15 +74,6 @@
     ")\n",
     "\n",
     "curate.validate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curate.non_validated"
    ]
   },
   {
