🚚 Back to ln.track()

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -102,8 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.context.uid = \"eNef4Arw8nNM0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"eNef4Arw8nNM0000\")"
    ]
   },
   {
