--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -56,8 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.context.uid = \"hsPU1OENv0LS0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"hsPU1OENv0LS0000\")"
    ]
   },
   {
