--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -125,8 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.context.uid = \"s5V0dNMVwL9i0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"s5V0dNMVwL9i0000\")"
    ]
   },
   {
