--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -75,8 +75,7 @@
     "\n",
     "bt.settings.organism = \"human\"  # globally set organism to human\n",
     "\n",
-    "ln.context.uid = \"OWuTtS4SApon0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"OWuTtS4SApon0000\")"
    ]
   },
   {
