--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -37,8 +37,7 @@
     "\n",
     "bt.settings.organism = \"human\"\n",
     "\n",
-    "ln.context.uid = \"SmQmhrhigFPL0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"SmQmhrhigFPL0000\")"
    ]
   },
   {
