--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -25,8 +25,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.context.uid = \"wukchS8V976U0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"wukchS8V976U0000\")"
    ]
   },
   {
