--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -25,8 +25,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.context.uid = \"zzJzdgJ763Dy0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"zzJzdgJ763Dy0000\")"
    ]
   },
   {
