--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -41,8 +41,7 @@
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
-    "ln.context.uid = \"K6sInKIQW5nt0002\"\n",
-    "ln.context.track()"
+    "ln.track(\"K6sInKIQW5nt0002\")"
    ]
   },
   {
