--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -346,8 +346,7 @@
    "outputs": [],
    "source": [
     "# track the current notebook as transform\n",
-    "ln.context.uid = \"1LCd8kco9lZU0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"1LCd8kco9lZU0000\")"
    ]
   },
   {
