--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -59,8 +59,7 @@
     "import matplotlib.pyplot as plt\n",
     "import scanpy as sc\n",
     "\n",
-    "ln.context.uid = \"daeFs3PkquDW0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"daeFs3PkquDW0000\")"
    ]
   },
   {
