--- a/docs/project-flow-scripts/hit-identification.ipynb
+++ b/docs/project-flow-scripts/hit-identification.ipynb
@@ -31,8 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.context.uid = \"T0T28btuB0PG0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"T0T28btuB0PG0000\")"
    ]
   },
   {
