--- a/docs/project-flow-scripts/integrated-analysis.ipynb
+++ b/docs/project-flow-scripts/integrated-analysis.ipynb
@@ -23,8 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.context.uid = \"lB3IyPLQSmvt0000\"\n",
-    "ln.context.track()"
+    "ln.track(\"lB3IyPLQSmvt0000\")"
    ]
   },
   {
