--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -40,7 +40,9 @@
     "import pandas as pd\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
-    "ln.track(\"K6sInKIQW5nt0002\")"
+    "\n",
+    "ln.context.uid = \"K6sInKIQW5nt0003\"\n",
+    "ln.context.track()"
    ]
   },
   {
@@ -53,8 +55,8 @@
    },
    "outputs": [],
    "source": [
-    "# See https://lamin.ai/laminlabs/lamindata/transform/13VINnFk89PE0004 to learn how this dataset was prepared\n",
-    "adata = ln.Artifact.using(\"laminlabs/lamindata\").get(uid=\"Xk7Qaik9vBLV4PKf0000\").load()\n",
+    "# See https://lamin.ai/laminlabs/lamindata/transform/13VINnFk89PE0006 to learn how this dataset was prepared\n",
+    "adata = ln.Artifact.using(\"laminlabs/lamindata\").get(uid=\"Xk7Qaik9vBLV4PKf0001\").load()\n",
     "adata.obs.head(3)"
    ]
   },
@@ -68,7 +70,7 @@
     "    adata,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    organism=\"human\",\n",
-    "    sources={\"var_index\": bt.Source.filter(entity=\"bionty.Gene\", version=\"release-112\", organism=\"human\").one()}\n",
+    "    using_key=\"laminlabs/lamindata\"\n",
     ")\n",
     "curate.validate()"
    ]
@@ -115,9 +117,8 @@
     "    \"tissue_type\": ln.ULabel.name,\n",
     "}\n",
     "sources = {\n",
-    "    \"var_index\": bt.Source.filter(entity=\"bionty.Gene\", version=\"release-112\", organism=\"human\").one(),\n",
-    "    \"depmap_id\": bt.Source.filter(name=\"depmap\").one(),\n",
-    "    \"cell_line\": bt.Source.filter(name=\"depmap\").one(),\n",
+    "    \"depmap_id\": bt.Source.using(\"laminlabs/lamindata\").filter(name=\"depmap\").one(),\n",
+    "    \"cell_line\": bt.Source.using(\"laminlabs/lamindata\").filter(name=\"depmap\").one(),\n",
     "}\n",
     "\n",
     "curate = ln.Curator.from_anndata(\n",
@@ -126,6 +127,7 @@
     "    categoricals=categoricals,\n",
     "    organism=\"human\",\n",
     "    sources=sources,\n",
+    "    using_key=\"laminlabs/lamindata\"\n",
     ")\n",
     "\n",
     "curate.validate()"
@@ -340,8 +342,7 @@
     "# We are using the chebi/chembl chemistry/drug ontology for the drug perturbations\n",
     "chebi_source = bt.Source.filter(entity=\"Drug\", name=\"chebi\").one()\n",
     "wl.Compound.add_source(chebi_source)\n",
-    "compounds = wl.Compound.public()\n",
-    "compounds.df().head(3)"
+    "compounds = wl.Compound.public()"
    ]
   },
   {
@@ -390,13 +391,7 @@
     "    \"taselisib\",\n",
     "]:\n",
     "    compounds.append(wl.Compound(name=missing))\n",
-    "ln.save(compounds)\n",
-    "\n",
-    "# We found a synonym for jq1. Let's use the correct name for the metadata\n",
-    "drug_metadata = adata.obs[adata.obs[\"perturbation_type\"] == \"drug\"].copy()\n",
-    "drug_metadata[\"perturbation\"] = drug_metadata[\"perturbation\"].cat.rename_categories(\n",
-    "    {\"jq1\": wl.Compound.search(\"jq1\").one().name}\n",
-    ")"
+    "ln.save(compounds)"
    ]
   },
   {
@@ -474,7 +469,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [],
