💚 Remove list_source

--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -365,7 +365,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.CellMarker.list_source()"
+    "bt.Source.filter(entity=\"bionty.CellMarker\").df()"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "outputs": [],
    "source": [
     "# only lists the sources that are currently used\n",
-    "bt.CellMarker.list_source(currently_used=True).df()"
+    "bt.Source.filter(entity=\"bionty.CellMarker\", currently_used=True).df()"
    ]
   },
   {
