--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -150,8 +150,7 @@
    "source": [
     "# add validated and new categories\n",
     "curate.add_new_from(\"perturbation\")\n",
-    "curate.add_new_from(\"replicate\")\n",
-    "curate.add_validated_from(\"technique\", modality=\"hto\")"
+    "curate.add_new_from(\"replicate\")"
    ]
   },
   {
@@ -232,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "yMWSFirS6qv2",
