--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -28,6 +28,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -111,13 +121,6 @@
    },
    "outputs": [],
    "source": [
-    "# add new gene symbols from the ['rna'].var.index\n",
-    "curate.add_new_from_var_index(\"rna\")\n",
-    "\n",
-    "# add new categories from the hto and gdo var.index\n",
-    "curate.add_new_from_var_index(\"hto\")\n",
-    "curate.add_new_from_var_index(\"gdo\")\n",
-    "\n",
     "# optional: register additional columns we'd like to curate\n",
     "curate.add_new_from_columns(modality=\"rna\")\n",
     "curate.add_new_from_columns(modality=\"adt\")\n",
@@ -148,10 +151,14 @@
    },
    "outputs": [],
    "source": [
-    "# add validated and new categories\n",
+    "# add new var index\n",
+    "curate.add_new_from_var_index(\"rna\")\n",
+    "curate.add_new_from_var_index(\"hto\")\n",
+    "curate.add_new_from_var_index(\"gdo\")\n",
+    "\n",
+    "# add new categories\n",
     "curate.add_new_from(\"perturbation\")\n",
-    "curate.add_new_from(\"replicate\")\n",
-    "curate.add_validated_from(\"technique\", modality=\"hto\")"
+    "curate.add_new_from(\"replicate\")"
    ]
   },
   {
@@ -218,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py310",
    "language": "python",
    "name": "python3"
   },
@@ -232,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "yMWSFirS6qv2",
