:art: Use from_source instead of from_public
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -422,11 +422,11 @@
    "source": [
     "for name in high_terms_nonval:\n",
     "    if name == \"T cells\":\n",
-    "        record = bt.CellType.from_public(name=\"T cell\")\n",
+    "        record = bt.CellType.from_source(name=\"T cell\")\n",
     "        record.add_synonym(name)\n",
     "        record.save()\n",
     "    elif name == \"Erythroid\":\n",
-    "        record = bt.CellType.from_public(name=\"erythroid lineage cell\")\n",
+    "        record = bt.CellType.from_source(name=\"erythroid lineage cell\")\n",
     "        record.add_synonym(name)\n",
     "        record.save()\n",
     "    else:\n",
