--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -379,7 +379,7 @@
    "outputs": [],
    "source": [
     "# import the FACS record from the public ontology and save it to the registry\n",
-    "facs = bt.ExperimentalFactor.from_public(ontology_id=\"EFO:0009108\")\n",
+    "facs = bt.ExperimentalFactor.from_source(ontology_id=\"EFO:0009108\")\n",
     "facs.save()"
    ]
   },
