--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -349,13 +349,15 @@
    },
    "outputs": [],
    "source": [
+    "from django.core.exceptions import ValidationError\n",
+    "\n",
     "public_records_dict = {r.ontology_id: r for r in public_records}\n",
     "\n",
     "for _, row in celltypist_df.iterrows():\n",
     "    record = public_records_dict[row[\"ontology_id\"]]\n",
     "    try:\n",
     "        record.add_synonym(row[\"ct_name\"])\n",
-    "    except ValueError:\n",
+    "    except ValidationError:  # do nothing if the synonym already exists as a record\n",
     "        pass"
    ]
   },
@@ -580,7 +582,7 @@
    "items": {}
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -594,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.7"
   },
   "nbproject": {
    "id": "s5mkN5NQ1ttI",
