:art: Fix celltypist
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -349,7 +349,7 @@
    },
    "outputs": [],
    "source": [
-    "from django.core.exceptions import ValidationError\n",
+    "from lamindb.core.exceptions import ValidationError\n",
     "\n",
     "public_records_dict = {r.ontology_id: r for r in public_records}\n",
     "\n",
