--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -271,7 +271,7 @@
     "\n",
     "genetic_treatments = []\n",
     "for name, symbol, target_name in treatments:\n",
-    "    treatment = wl.GeneticTreatment(system=\"CRISPR Cas9\", name=name).save()\n",
+    "    treatment = wl.GeneticTreatment(system=\"CRISPR-Cas9\", name=name).save()\n",
     "    if symbol != \"lacz\":\n",
     "        gene_result = bt.Gene.from_source(symbol=symbol, organism=organism)\n",
     "        gene = gene_result[0] if isinstance(gene_result, list) else gene_result\n",
