--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -306,8 +306,7 @@
     "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"seurat_ifnb_activated_Bcells\",\n",
-    ")\n",
-    "artifact.save()"
+    ").save()"
    ]
   },
   {
@@ -316,44 +315,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features._add_set_from_anndata(\n",
-    "    var_field=bt.Gene.symbol,\n",
-    "    organism=\"human\",  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Link cell type labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_type_records = bt.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
-    "artifact.labels.add(cell_type_records, features.cell_type_celltypist)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link stimulation labels:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stim_records = ln.ULabel.from_values(adata.obs[\"stim\"])\n",
-    "artifact.labels.add(stim_records, features.stim)"
+    "# TODO: rewrite based on ln.Curator.from_anndata()\n",
+    "# artifact.features._add_set_from_anndata(\n",
+    "#     var_field=bt.Gene.symbol,\n",
+    "#     organism=\"human\",  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
+    "# )\n",
+    "# cell_type_records = bt.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
+    "# artifact.labels.add(cell_type_records, features.cell_type_celltypist)\n",
+    "# stim_records = ln.ULabel.from_values(adata.obs[\"stim\"])\n",
+    "# artifact.labels.add(stim_records, features.stim)"
    ]
   },
   {
@@ -468,72 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Querying metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Querying cell types"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Querying for cell types contains \"B cell\" in the name:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bt.CellType.filter(name__contains=\"B cell\").df().head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Querying for all artifacts curated with a cell type:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "celltypes = bt.CellType.lookup()\n",
-    "celltypes.plasmacytoid_dendritic_cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Artifact.filter(cell_types=celltypes.plasmacytoid_dendritic_cell).df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Querying pathways"
+    "## Querying pathways"
    ]
   },
   {
