--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -41,8 +41,7 @@
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
-    "ln.context.uid = \"K6sInKIQW5nt0003\"\n",
-    "ln.context.track()"
+    "ln.track(\"K6sInKIQW5nt0003\")"
    ]
   },
   {
@@ -274,10 +273,11 @@
     "    treatment = wl.GeneticTreatment(system=\"CRISPR-Cas9\", name=name).save()\n",
     "    if symbol != \"lacz\":\n",
     "        gene_result = bt.Gene.from_source(symbol=symbol, organism=organism)\n",
-    "        gene = gene_result[0] if isinstance(gene_result, list) else gene_result\n",
+    "        gene = gene_result[0] if isinstance(gene_result, ln.core.RecordList) else gene_result\n",
     "        gene = gene.save()\n",
     "    else:\n",
     "        gene = bt.Gene(symbol=symbol, organism=organism).save()\n",
+    "    print(gene)\n",
     "    target = wl.TreatmentTarget(name=target_name).save()\n",
     "    target.genes.add(gene)\n",
     "    treatment.targets.add(target)\n",
@@ -479,7 +479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py310",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
