--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -129,7 +129,17 @@
     "    using_key=\"laminlabs/lamindata\"\n",
     ")\n",
     "\n",
-    "curate.validate()"
+    "curate.validate()\n",
+    "curate.standardize(\"disease\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature.df()"
    ]
   },
   {
@@ -277,7 +287,6 @@
     "        gene = gene.save()\n",
     "    else:\n",
     "        gene = bt.Gene(symbol=symbol, organism=organism).save()\n",
-    "    print(gene)\n",
     "    target = wl.TreatmentTarget(name=target_name).save()\n",
     "    target.genes.add(gene)\n",
     "    treatment.targets.add(target)\n",
